# advent_of_code_2023

./: LICENSE  advent-of-code2023.cabal  new_day.sh
app/: Day1.hs  Main.hs
days/: Day1.hs  Day10.hs  Day11.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
test/: Spec.hs
test/Test/: DoctestDay10.hs  DoctestDay11.hs  DoctestDay3.hs  DoctestDay4.hs  DoctestDay5.hs  DoctestDay6.hs  DoctestDay7.hs  DoctestDay8.hs  DoctestDay9.hs
