cabal-version:      2.4
name:               advent-of-code2023
version:            0.1.0.0
build-type:         Simple

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
author: pgoellner

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library advent-days
  exposed-modules:    Day1
                    , Day2
                    , Day3
                    , Day4
                    , Day5
                    , Day6
                    , Day7
                    , Day8
  build-depends:      base ^>=4.17.2.0
                    , text ^>=2.0.2
                    , leancheck ^>=1.0.0
  hs-source-dirs:     days
  default-language:   Haskell2010

executable advent-of-code2023
    main-is:          Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                    , text ^>=2.0.2
                    , advent-days
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite aoc-tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs

  other-modules:      Test.DoctestDay3
                    , Test.DoctestDay4
                    , Test.DoctestDay5
                    , Test.DoctestDay6
                    , Test.DoctestDay7
                    , Test.DoctestDay8
  build-depends:      advent-days
                    , hspec >= 2.9 && < 2.11
                    , base ^>=4.17.2.0